# yamdbot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  run.py
src/: workers.py
src/YandexMusic/: __init__.py  models.py
