[project]
name = "yamdbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "js2py~=0.74",
    "loguru~=0.7.2",
    "pydantic~=2.7.0",
    "pytelegrambotapi~=4.22.1",
    "python-dotenv~=1.0.1",
    "requests~=2.31.0",
    "ruff>=0.14.0",
    "simplejson~=3.19.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
